2002-08-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Second parameter is
	renamed to secondcall and use is negated.
	(TLS_SETUP_GS_SEGMENT): Likewise.
	(TLS_INIT_TP): Likewise.
	* sysdeps/sh/tls.h (TLS_INIT_TP): Second parameter is renamed to
	secondcall.

	* sysdeps/i386/tls.h: Use 32-bit operations when handling segment
	registers.  No need to mask upper 16 bits in this case.
	* sysdeps/i386/useldt.h: Likewise.
	(DO_SET_THREAD_AREA): We have to load %gs again even if the value
	is the same since the GDT content changed.

	* sysdeps/i386/tls.h (TLS_INIT_TP): Add new parameter and pass it on
	to TLS_SETUP_GS_SEGMENT.
	(TLS_SETUP_GS_SEGMENT): Add new parameter and pass it on to
	TLS_DO_SET_THREAD_AREA.
	(TLS_DO_SET_THREAD_AREA): If new parameter is zero determine
	entry number from %gs value.
	* sysdeps/sh/tls.h (TLS_INIT_TP): Add new parameter and simply
	ignore it.

	* manager.c (pthread_handle_create): Pass NULL to _dl_allocate_tls.
	Pass true to _dl_deallocate_tls.
	(pthread_free): Likewise.
	* pthread.c (__pthread_initialize_manager): Likewise.

2002-08-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/useldt.h (DO_SET_THREAD_AREA): Use correct shift when
	computing index from %gs value.

2002-08-16  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Calculate segment
	register value from entry number properly.

	* sysdeps/i386/tls.h (TLS_DO_MODIFY_LDT): Rewrite asm to use %ebx
	optimally conditional on [__PIC__].
	(TLS_DO_SET_THREAD_AREA): New macro, implement inline syscall
	without touching errno, and use latest modify_ldt-like interface.
	(TLS_SETUP_GS_SEGMENT): Use that instead of INLINE_SYSCALL.
	* sysdeps/i386/useldt.h (DO_MODIFY_LDT): Set %gs in this macro.
	(DO_SET_THREAD_AREA): New macro, uses current syscall interface with
	existing %gs value as the segment to set.
	(INIT_THREAD_SELF): Rewritten using those.  Use set_thread_area only