@@ -1,5 +1,10 @@
 2002-08-20  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/i386/useldt.h: Go back to using 16-bit instructions when
+	loading/reading segment registers.  Some old hardware doesn't
+	handle the 32-bit instructions as expected.
+	* sysdeps/i386/tls.h: Likewise.
+
 	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Second parameter is
 	renamed to secondcall and use is negated.
 	(TLS_SETUP_GS_SEGMENT): Likewise.
